; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/nptv6/extr_nptv6.c_nptv6_set_external.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/nptv6/extr_nptv6.c_nptv6_set_external.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nptv6_cfg = type { i32, i32, %struct.in6_addr }
%struct.in6_addr = type { i32 }

@NPTV6_READY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nptv6_cfg*, %struct.in6_addr*)* @nptv6_set_external to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nptv6_set_external(%struct.nptv6_cfg* %0, %struct.in6_addr* %1) #0 {
  %3 = alloca %struct.nptv6_cfg*, align 8
  %4 = alloca %struct.in6_addr*, align 8
  store %struct.nptv6_cfg* %0, %struct.nptv6_cfg** %3, align 8
  store %struct.in6_addr* %1, %struct.in6_addr** %4, align 8
  %5 = load %struct.nptv6_cfg*, %struct.nptv6_cfg** %3, align 8
  %6 = getelementptr inbounds %struct.nptv6_cfg, %struct.nptv6_cfg* %5, i32 0, i32 2
  %7 = load %struct.in6_addr*, %struct.in6_addr** %4, align 8
  %8 = bitcast %struct.in6_addr* %6 to i8*
  %9 = bitcast %struct.in6_addr* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %8, i8* align 4 %9, i64 4, i1 false)
  %10 = load %struct.nptv6_cfg*, %struct.nptv6_cfg** %3, align 8
  %11 = getelementptr inbounds %struct.nptv6_cfg, %struct.nptv6_cfg* %10, i32 0, i32 2
  %12 = load %struct.nptv6_cfg*, %struct.nptv6_cfg** %3, align 8
  %13 = getelementptr inbounds %struct.nptv6_cfg, %struct.nptv6_cfg* %12, i32 0, i32 1
  %14 = call i32 @IN6_MASK_ADDR(%struct.in6_addr* %11, i32* %13)
  %15 = load %struct.nptv6_cfg*, %struct.nptv6_cfg** %3, align 8
  %16 = call i32 @nptv6_calculate_adjustment(%struct.nptv6_cfg* %15)
  %17 = load i32, i32* @NPTV6_READY, align 4
  %18 = load %struct.nptv6_cfg*, %struct.nptv6_cfg** %3, align 8
  %19 = getelementptr inbounds %struct.nptv6_cfg, %struct.nptv6_cfg* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = or i32 %20, %17
  store i32 %21, i32* %19, align 4
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @IN6_MASK_ADDR(%struct.in6_addr*, i32*) #2

declare dso_local i32 @nptv6_calculate_adjustment(%struct.nptv6_cfg*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
